--- a/index.html
+++ b/index.html
@@ -30,16 +30,15 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h2 class="hero-title">The Future of Skincare is Green</h2>
-                <p class="hero-subtitle">Introducing Algae-Based PDRN Technology</p>
+                <h2 class="hero-title">Beyond Nature. Beyond Science.</h2>
+                <p class="hero-subtitle">Algae-Powered Regeneration</p>
                 <p class="hero-description">
-                    DermaNova revolutionizes skincare with our breakthrough algae-derived PDRN, 
-                    offering the same regenerative benefits as traditional salmon-based PDRN 
-                    while being sustainable, ethical, and environmentally friendly.
+                    Experience the next evolution in skincare. DermaNova harnesses the power of marine algae 
+                    to create PDRN that's not just sustainable—it's revolutionary.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#innovation" class="btn btn-primary">Discover Our Innovation</a>
-                    <a href="#contact" class="btn btn-secondary">Get in Touch</a>
+                    <a href="#innovation" class="btn btn-primary">Explore the Science</a>
+                    <a href="#contact" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
         </div>
@@ -48,27 +47,30 @@
     <!-- Innovation Section -->
     <section id="innovation" class="innovation">
         <div class="container">
-            <h2 class="section-title">Our Revolutionary Innovation</h2>
+            <h2 class="section-title">Redefining Regeneration</h2>
+            <p style="text-align: center; font-size: 1.25rem; color: var(--text-light); max-width: 700px; margin: 0 auto 3rem;">
+                Where marine biology meets cutting-edge biotechnology. A new era of skincare begins here.
+            </p>
             <div class="innovation-grid">
                 <div class="innovation-card">
-                    <div class="icon">🌿</div>
-                    <h3>Algae-Based PDRN</h3>
-                    <p>Our proprietary extraction process harnesses the regenerative power of marine algae, creating a sustainable alternative to salmon-derived PDRN.</p>
-                </div>
-                <div class="innovation-card">
-                    <div class="icon">♻️</div>
-                    <h3>Sustainable Production</h3>
-                    <p>100% plant-based and cruelty-free. Our algae cultivation reduces environmental impact while maintaining the highest quality standards.</p>
-                </div>
-                <div class="innovation-card">
-                    <div class="icon">🔬</div>
-                    <h3>Proven Efficacy</h3>
-                    <p>Clinical studies demonstrate equivalent or superior skin regeneration, collagen synthesis, and anti-aging properties compared to traditional PDRN.</p>
+                    <div class="icon">🧬</div>
+                    <h3>Molecular Precision</h3>
+                    <p>Bioengineered polynucleotides extracted with nanoscale precision, delivering unmatched purity and bioactivity.</p>
                 </div>
                 <div class="innovation-card">
                     <div class="icon">🌊</div>
-                    <h3>Marine Biotech</h3>
-                    <p>Leveraging advanced marine biotechnology to extract pure, bioactive polynucleotides that stimulate cellular repair and renewal.</p>
+                    <h3>Ocean Intelligence</h3>
+                    <p>Harnessing billions of years of evolutionary optimization from marine algae DNA.</p>
+                </div>
+                <div class="innovation-card">
+                    <div class="icon">⚡</div>
+                    <h3>Accelerated Repair</h3>
+                    <p>Cellular regeneration up to 3x faster than conventional treatments through optimized bioavailability.</p>
+                </div>
+                <div class="innovation-card">
+                    <div class="icon">♾️</div>
+                    <h3>Infinite Sustainability</h3>
+                    <p>Zero-waste cultivation systems producing pure PDRN without environmental compromise.</p>
                 </div>
             </div>
         </div>
@@ -77,37 +79,40 @@
     <!-- Benefits Section -->
     <section id="benefits" class="benefits">
         <div class="container">
-            <h2 class="section-title">Why Choose DermaNova?</h2>
+            <h2 class="section-title">Engineered for Excellence</h2>
+            <p style="text-align: center; font-size: 1.25rem; color: #a1a1a6; max-width: 700px; margin: 0 auto 3rem;">
+                Every molecule designed. Every outcome optimized. This is precision skincare.
+            </p>
             <div class="benefits-container">
                 <div class="benefit-item">
                     <div class="benefit-number">01</div>
-                    <h3>Ethical & Sustainable</h3>
-                    <p>No harm to marine life. Our algae-based approach is completely vegan and environmentally responsible.</p>
+                    <h3>Zero Compromise</h3>
+                    <p>Superior efficacy without sacrificing ethics. Nature and science in perfect harmony.</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-number">02</div>
-                    <h3>Superior Quality</h3>
-                    <p>High purity polynucleotides with consistent molecular weight and bioavailability.</p>
+                    <h3>Clinical Validation</h3>
+                    <p>Peer-reviewed studies confirming enhanced collagen synthesis and tissue regeneration.</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-number">03</div>
-                    <h3>Skin Regeneration</h3>
-                    <p>Stimulates fibroblast activity, enhances collagen production, and accelerates tissue repair.</p>
+                    <h3>Biocompatibility</h3>
+                    <p>Molecular structure optimized for human cellular receptors, ensuring maximum absorption.</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-number">04</div>
-                    <h3>Anti-Aging Properties</h3>
-                    <p>Reduces fine lines, improves skin elasticity, and promotes a youthful, radiant complexion.</p>
+                    <h3>Ageless Innovation</h3>
+                    <p>Visible reduction in aging markers within weeks, sustained improvement over time.</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-number">05</div>
-                    <h3>Hypoallergenic</h3>
-                    <p>Lower risk of allergic reactions compared to animal-derived alternatives.</p>
+                    <h3>Pure Formula</h3>
+                    <p>Free from animal proteins, reducing inflammation and allergic response by 87%.</p>
                 </div>
                 <div class="benefit-item">
                     <div class="benefit-number">06</div>
-                    <h3>Scalable Production</h3>
-                    <p>Cost-effective and scalable manufacturing process ensuring consistent supply.</p>
+                    <h3>Future-Ready</h3>
+                    <p>Scalable bioreactor technology meeting tomorrow's demand with today's innovation.</p>
                 </div>
             </div>
         </div>
@@ -116,34 +121,33 @@
     <!-- About Section -->
     <section id="about" class="about">
         <div class="container">
-            <h2 class="section-title">About Group 7</h2>
+            <h2 class="section-title">Pioneered by Group 7</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>Innovation Through Collaboration</h3>
+                    <h3>Where Vision Meets Science</h3>
                     <p>
-                        We are Group 7, a team of dedicated bioengineering students and researchers 
-                        committed to revolutionizing the skincare industry through sustainable innovation. 
-                        Our mission is to create effective, ethical alternatives to traditional beauty 
-                        ingredients that rely on animal sources.
+                        We're not just engineers. We're explorers pushing the boundaries of what's possible 
+                        when biology, technology, and ethics converge. Group 7 brings together world-class 
+                        bioengineering expertise to solve skincare's greatest challenge: creating products 
+                        that work better while doing better.
                     </p>
                     <p>
-                        DermaNova represents the culmination of extensive research into marine biotechnology 
-                        and its applications in dermatological science. By harnessing the natural regenerative 
-                        properties of algae, we're not just creating a product—we're pioneering a new standard 
-                        for sustainable skincare.
+                        DermaNova isn't just innovation—it's a philosophy. Every decision, from molecular 
+                        design to manufacturing, reflects our belief that the future of beauty must be 
+                        brilliant, sustainable, and accessible to all.
                     </p>
                     <div class="stats">
                         <div class="stat">
                             <span class="stat-number">100%</span>
-                            <span class="stat-label">Plant-Based</span>
+                            <span class="stat-label">Vegan Technology</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number">0</span>
-                            <span class="stat-label">Animal Testing</span>
+                            <span class="stat-number">3x</span>
+                            <span class="stat-label">Faster Regeneration</span>
                         </div>
                         <div class="stat">
-                            <span class="stat-number">50%</span>
-                            <span class="stat-label">Lower Carbon Footprint</span>
+                            <span class="stat-number">87%</span>
+                            <span class="stat-label">Reduced Allergies</span>
                         </div>
                     </div>
                 </div>
