Add visual enhancements: floating algae particles, organic shapes, and interactive animations

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>Cellular regeneration up to 3x faster than conventional treatments through optimized bioavailability.</p>
                 </div>
                 <div class="innovation-card">
-                    <div class="icon">♾️</div>
+                    <div class="icon">🌿</div>
                     <h3>Infinite Sustainability</h3>
                     <p>Zero-waste cultivation systems producing pure PDRN without environmental compromise.</p>
                 </div>
@@ -113,6 +113,40 @@
                     <div class="benefit-number">06</div>
                     <h3>Future-Ready</h3>
                     <p>Scalable bioreactor technology meeting tomorrow's demand with today's innovation.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Visual Feature Section -->
+    <section class="visual-feature">
+        <div class="container">
+            <div class="feature-content">
+                <div class="feature-visual">
+                    <div class="algae-circle main-circle">
+                        <div class="algae-cell"></div>
+                        <div class="algae-cell"></div>
+                        <div class="algae-cell"></div>
+                    </div>
+                    <div class="dna-strand"></div>
+                </div>
+                <div class="feature-text">
+                    <h2>From Ocean to Innovation</h2>
+                    <p>Our proprietary extraction process transforms marine algae into the world's most advanced PDRN technology. Every molecule tells a story of billions of years of natural evolution, now harnessed for your skin's regeneration.</p>
+                    <div class="feature-stats">
+                        <div class="mini-stat">
+                            <span class="mini-number">99.8%</span>
+                            <span class="mini-label">Purity</span>
+                        </div>
+                        <div class="mini-stat">
+                            <span class="mini-number">24h</span>
+                            <span class="mini-label">Extraction</span>
+                        </div>
+                        <div class="mini-stat">
+                            <span class="mini-number">0%</span>
+                            <span class="mini-label">Waste</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
