Add 3R recovery mechanism section and algae vs salmon PDRN comparison highlighting unique selling points

--- a/index.html
+++ b/index.html
@@ -118,6 +118,134 @@
         </div>
     </section>
 
+    <!-- 3R Recovery Section -->
+    <section class="three-r-section">
+        <div class="container">
+            <h2 class="section-title" style="color: var(--white);">Fast & High Quality Recovery</h2>
+            <p style="text-align: center; font-size: 1.25rem; color: #a1a1a6; max-width: 700px; margin: 0 auto 4rem;">
+                The 3 "R" mechanism that transforms skin regeneration
+            </p>
+            <div class="three-r-grid">
+                <div class="r-card">
+                    <div class="r-header">
+                        <div class="r-icon">🛡️</div>
+                        <h3>Relieve Inflammation</h3>
+                    </div>
+                    <div class="r-content">
+                        <h4>Mechanism:</h4>
+                        <p>PDRN is metabolized into <strong>Adenosine</strong>, which activates the <strong>Adenosine A2A receptor</strong></p>
+                        <h4>Effects:</h4>
+                        <p>Activation is an "off switch" to reduce pro-inflammatory cytokines (TNF-α, IL-6), creating optimal healing conditions</p>
+                    </div>
+                </div>
+                <div class="r-card">
+                    <div class="r-header">
+                        <div class="r-icon">🧬</div>
+                        <h3>Regenerate Tissue</h3>
+                    </div>
+                    <div class="r-content">
+                        <h4>Mechanism:</h4>
+                        <p>Supplies <strong>deoxyribonucleotides</strong> for DNA synthesis and cell proliferation, and upregulates <strong>VEGF</strong> (Vascular Endothelial Growth Factor) expression</p>
+                        <h4>Effects:</h4>
+                        <p>Promotes new blood vessel growth, efficient oxygen and nutrient delivery, accelerate wound recovery by rebuilding healthy tissue</p>
+                    </div>
+                </div>
+                <div class="r-card">
+                    <div class="r-header">
+                        <div class="r-icon">✨</div>
+                        <h3>Refine Scarring</h3>
+                    </div>
+                    <div class="r-content">
+                        <h4>Mechanism:</h4>
+                        <p>PDRN regulates <strong>fibroblast activity</strong> and the wound healing matrix</p>
+                        <h4>Effects:</h4>
+                        <p>Collagen production changes from weak Type III to strong Type I collagen, minimizing scarring and improving skin texture</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Differentiation Section -->
+    <section class="differentiation-section">
+        <div class="container">
+            <h2 class="section-title">Why Algae Over Salmon?</h2>
+            <p style="text-align: center; font-size: 1.25rem; color: var(--text-light); max-width: 800px; margin: 0 auto 4rem;">
+                Our algae-based PDRN isn't just sustainable—it's scientifically superior in every measurable way
+            </p>
+            <div class="comparison-grid">
+                <div class="comparison-card highlight">
+                    <div class="card-badge">DermaNova Advantage</div>
+                    <div class="comparison-icon">🌿</div>
+                    <h3>Algae-Based PDRN</h3>
+                    <div class="benefits-list">
+                        <div class="benefit-group">
+                            <h4>🔬 Higher Safety</h4>
+                            <ul>
+                                <li><strong>98% similarity</strong> to human DNA structure</li>
+                                <li>Milder and fewer adverse reactions</li>
+                                <li>Hypoallergenic formulation</li>
+                            </ul>
+                        </div>
+                        <div class="benefit-group">
+                            <h4>⚡ Faster Effectiveness</h4>
+                            <ul>
+                                <li><strong>Small molecular weight</strong> for superior absorption</li>
+                                <li>Strong permeability through skin layers</li>
+                                <li>Rapid inflammation alleviation</li>
+                                <li>Accelerated healing response</li>
+                            </ul>
+                        </div>
+                        <div class="benefit-group">
+                            <h4>♻️ Scalability & Sustainability</h4>
+                            <ul>
+                                <li>Closed cultivation systems</li>
+                                <li>Scalable biomass production</li>
+                                <li>Zero harm to marine ecosystems</li>
+                                <li>Consistent quality batch-to-batch</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="comparison-card">
+                    <div class="comparison-icon">🐟</div>
+                    <h3>Salmon-Based PDRN</h3>
+                    <div class="benefits-list traditional">
+                        <div class="benefit-group">
+                            <h4>⚠️ Safety Concerns</h4>
+                            <ul>
+                                <li>Animal protein content</li>
+                                <li>Higher risk of allergic reactions</li>
+                                <li>Potential immunogenic response</li>
+                            </ul>
+                        </div>
+                        <div class="benefit-group">
+                            <h4>⏱️ Slower Absorption</h4>
+                            <ul>
+                                <li>Larger molecular structures</li>
+                                <li>Reduced skin penetration</li>
+                                <li>Delayed therapeutic effect</li>
+                            </ul>
+                        </div>
+                        <div class="benefit-group">
+                            <h4>🌊 Environmental Impact</h4>
+                            <ul>
+                                <li>Depends on wild salmon populations</li>
+                                <li>Supply chain variability</li>
+                                <li>Ethical concerns</li>
+                                <li>Batch inconsistency</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom-cta">
+                <p>The choice is clear. The future is algae.</p>
+                <a href="#contact" class="btn btn-primary">Experience the Difference</a>
+            </div>
+        </div>
+    </section>
+
     <!-- Visual Feature Section -->
     <section class="visual-feature">
         <div class="container">
