Fix: Remove 'Engineered for Excellence' section, update navigation to focus on 3R Benefits

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#innovation" class="nav-link">Innovation</a></li>
-                <li><a href="#benefits" class="nav-link">Benefits</a></li>
+                <li><a href="#benefits" class="nav-link">3R Benefits</a></li>
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
@@ -78,50 +78,8 @@
         </div>
     </section>
 
-    <!-- Benefits Section -->
-    <section id="benefits" class="benefits">
-        <div class="container">
-            <h2 class="section-title">Engineered for Excellence</h2>
-            <p style="text-align: center; font-size: 1.25rem; color: #a1a1a6; max-width: 700px; margin: 0 auto 3rem;">
-                Every molecule designed. Every outcome optimized. This is precision skincare.
-            </p>
-            <div class="benefits-container">
-                <div class="benefit-item">
-                    <div class="benefit-number">01</div>
-                    <h3>Zero Compromise</h3>
-                    <p>Superior efficacy without sacrificing ethics. Nature and science in perfect harmony.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-number">02</div>
-                    <h3>Clinical Validation</h3>
-                    <p>Peer-reviewed studies confirming enhanced collagen synthesis and tissue regeneration.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-number">03</div>
-                    <h3>Biocompatibility</h3>
-                    <p>Molecular structure optimized for human cellular receptors, ensuring maximum absorption.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-number">04</div>
-                    <h3>Ageless Innovation</h3>
-                    <p>Visible reduction in aging markers within weeks, sustained improvement over time.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-number">05</div>
-                    <h3>Pure Formula</h3>
-                    <p>Free from animal proteins, reducing inflammation and allergic response by 87%.</p>
-                </div>
-                <div class="benefit-item">
-                    <div class="benefit-number">06</div>
-                    <h3>Future-Ready</h3>
-                    <p>Scalable bioreactor technology meeting tomorrow's demand with today's innovation.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- 3R Recovery Section -->
-    <section class="three-r-section">
+    <section id="benefits" class="three-r-section">
         <div class="container">
             <h2 class="section-title" style="color: var(--white);">Fast & High Quality Recovery</h2>
             <p style="text-align: center; font-size: 1.25rem; color: #a1a1a6; max-width: 700px; margin: 0 auto 4rem;">
