Add underwater algae hero image, reorder sections, and add product tagline
- Add new underwater algae image with sunlight as hero background
- Include local algae images in repository
- Add opening tagline: 'The world's first algae-based PDRN skincare technology'
- Reorder sections: 3R Recovery → Why Algae Over Salmon → From Ocean to Innovation → Redefining Regeneration
- Adjust hero overlay to showcase sunlight while maintaining text readability
- Add text shadows for better contrast against bright background
- Update mobile responsive styles for new tagline

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="hero-bg-image"></div>
         <div class="container">
             <div class="hero-content">
+                <p class="hero-tagline">The world's first algae-based PDRN skincare technology for superior skin regeneration</p>
                 <h2 class="hero-title">Beyond Nature. Beyond Science.</h2>
                 <p class="hero-subtitle">Algae-Powered Regeneration</p>
                 <p class="hero-description">
@@ -40,39 +41,6 @@
                 <div class="hero-buttons">
                     <a href="#innovation" class="btn btn-primary">Explore the Science</a>
                     <a href="#contact" class="btn btn-secondary">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Innovation Section -->
-    <section id="innovation" class="innovation">
-        <div class="innovation-bg-image"></div>
-        <div class="container">
-            <h2 class="section-title">Redefining Regeneration</h2>
-            <p style="text-align: center; font-size: 1.25rem; color: var(--text-light); max-width: 700px; margin: 0 auto 3rem;">
-                Where marine biology meets cutting-edge biotechnology. A new era of skincare begins here.
-            </p>
-            <div class="innovation-grid">
-                <div class="innovation-card">
-                    <div class="icon">🧬</div>
-                    <h3>Molecular Precision</h3>
-                    <p>Bioengineered polynucleotides extracted with nanoscale precision, delivering unmatched purity and bioactivity.</p>
-                </div>
-                <div class="innovation-card">
-                    <div class="icon">🌊</div>
-                    <h3>Ocean Intelligence</h3>
-                    <p>Harnessing billions of years of evolutionary optimization from marine algae DNA.</p>
-                </div>
-                <div class="innovation-card">
-                    <div class="icon">⚡</div>
-                    <h3>Accelerated Repair</h3>
-                    <p>Cellular regeneration up to 3x faster than conventional treatments through optimized bioavailability.</p>
-                </div>
-                <div class="innovation-card">
-                    <div class="icon">🌿</div>
-                    <h3>Infinite Sustainability</h3>
-                    <p>Zero-waste cultivation systems producing pure PDRN without environmental compromise.</p>
                 </div>
             </div>
         </div>
@@ -239,6 +207,39 @@
                             <span class="mini-label">Waste</span>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Innovation Section -->
+    <section id="innovation" class="innovation">
+        <div class="innovation-bg-image"></div>
+        <div class="container">
+            <h2 class="section-title">Redefining Regeneration</h2>
+            <p style="text-align: center; font-size: 1.25rem; color: var(--text-light); max-width: 700px; margin: 0 auto 3rem;">
+                Where marine biology meets cutting-edge biotechnology. A new era of skincare begins here.
+            </p>
+            <div class="innovation-grid">
+                <div class="innovation-card">
+                    <div class="icon">🧬</div>
+                    <h3>Molecular Precision</h3>
+                    <p>Bioengineered polynucleotides extracted with nanoscale precision, delivering unmatched purity and bioactivity.</p>
+                </div>
+                <div class="innovation-card">
+                    <div class="icon">🌊</div>
+                    <h3>Ocean Intelligence</h3>
+                    <p>Harnessing billions of years of evolutionary optimization from marine algae DNA.</p>
+                </div>
+                <div class="innovation-card">
+                    <div class="icon">⚡</div>
+                    <h3>Accelerated Repair</h3>
+                    <p>Cellular regeneration up to 3x faster than conventional treatments through optimized bioavailability.</p>
+                </div>
+                <div class="innovation-card">
+                    <div class="icon">🌿</div>
+                    <h3>Infinite Sustainability</h3>
+                    <p>Zero-waste cultivation systems producing pure PDRN without environmental compromise.</p>
                 </div>
             </div>
         </div>
