Improve mobile UX: hide nav menu, add tagline separator, enable horizontal scroll
- Hide navigation menu on mobile (768px and below) for cleaner look
- Add tagline separator section between hero and 3R sections (mobile only)
- Displays: 'The world's first algae-based PDRN skincare technology for superior skin regeneration'
- Make comparison cards horizontally scrollable on mobile (side-by-side)
- Cards are 85vw wide on tablet, 90vw on small mobile
- Add smooth scroll snapping for better card navigation
- Custom scrollbar styling with algae-green theme
- Prevents green background overlap between sections on mobile

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         </div>
     </section>
 
+    <!-- Tagline Separator Section -->
+    <section class="tagline-separator">
+        <div class="container">
+            <p class="separator-tagline">The world's first algae-based PDRN skincare technology for superior skin regeneration</p>
+        </div>
+    </section>
+
     <!-- 3R Recovery Section -->
     <section id="benefits" class="three-r-section">
         <div class="container">
