Update hero description with focused product tagline
- Replace long description with concise value proposition
- New text: 'The world's first algae-based PDRN skincare technology for superior healing and skin regeneration'
- More direct and impactful messaging
- Applies to both desktop and mobile views

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                 <h2 class="hero-title">Beyond Nature. Beyond Science.</h2>
                 <p class="hero-subtitle">Algae-Powered Regeneration</p>
                 <p class="hero-description">
-                    Experience the next evolution in skincare. DermaNova harnesses the power of marine algae 
-                    to create PDRN that's not just sustainable—it's revolutionary.
+                    The world's first algae-based PDRN skincare technology for superior healing and skin regeneration.
                 </p>
                 <div class="hero-buttons">
                     <a href="#innovation" class="btn btn-primary">Explore the Science</a>
