Update hero section, navigation links, and contact title
- Make hero section full-screen (100vh) on desktop with centered content
- Change 'Explore the Science' link to navigate to #benefits (3R section)
- Update contact section title from 'Get in Touch' to 'Get a Free Sample'
- Learn More button already has white background from previous commit
- Add padding to hero-content for proper spacing
- Consistent full-screen experience across desktop and mobile

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     The world's first algae-based PDRN skincare technology for superior healing and skin regeneration.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#innovation" class="btn btn-primary">Explore the Science</a>
+                    <a href="#benefits" class="btn btn-primary">Explore the Science</a>
                     <a href="#contact" class="btn btn-secondary">Learn More</a>
                 </div>
             </div>
@@ -294,7 +294,7 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Get in Touch</h2>
+            <h2 class="section-title">Get a Free Sample</h2>
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Contact DermaNova</h3>
