Update card badge text in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </p>
             <div class="comparison-grid">
                 <div class="comparison-card highlight">
-                    <div class="card-badge">DermaNova Advantage</div>
+                    <div class="card-badge">Advantage</div>
                     <div class="comparison-icon">🌿</div>
                     <h3>Algae-Based PDRN</h3>
                     <div class="benefits-list">
